--- a/index.html
+++ b/index.html
@@ -1,129 +1,75 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <title>Love You Настикс ❤️</title>
+  <meta charset="UTF-8">
+  <title>Love You Настикс</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
-
     html, body {
       margin: 0;
       padding: 0;
-      background: #000;
-      font-family: 'Russo One', sans-serif;
-      height: 100vh;
+      background: black;
       overflow: hidden;
+      height: 100%;
+      font-family: sans-serif;
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+      grid-auto-rows: 40px;
+      justify-items: center;
+      align-items: center;
+      height: 100vh;
+      width: 100vw;
+      position: relative;
+    }
+
+    .text {
+      color: #ff69b4;
+      font-size: 16px;
+      font-weight: bold;
+      transition: transform 0.3s ease, opacity 0.3s ease;
       user-select: none;
-      cursor: pointer;
     }
 
-    .falling-phrase {
-      position: fixed;
-      white-space: nowrap;
-      font-size: 24px;
-      font-weight: 700;
-      color: #ff66c4;
-      text-shadow: 0 0 3px #ff66c4;
-      pointer-events: none;
-      animation: fall 6s linear forwards;
-      opacity: 0.9;
-      left: 0;
-      top: 0;
-    }
-
-    @keyframes fall {
-      0% {
-        transform: translateY(-40px);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(110vh);
-        opacity: 0;
-      }
-    }
-
-    .heart {
-      position: fixed;
-      pointer-events: none;
-      color: #ff66c4;
-      font-size: 22px;
-      user-select: none;
-      opacity: 1;
-      text-shadow: 0 0 3px #ff66c4;
-      transition: opacity 1.2s ease-out;
+    .text.pop {
+      transform: scale(2.2);
+      opacity: 0.2;
     }
   </style>
 </head>
 <body>
+  <div class="container" id="grid"></div>
 
-<script>
-  function createFallingPhrase() {
-    const phrase = document.createElement("div");
-    phrase.className = "falling-phrase";
-    phrase.textContent = "Love You Настикс ❤️";
+  <script>
+    const grid = document.getElementById('grid');
+    const phrase = 'Love You Настикс';
 
-    const fontSize = Math.random() * 8 + 20;
-    phrase.style.fontSize = fontSize + "px";
+    const cols = Math.ceil(window.innerWidth / 80);
+    const rows = Math.ceil(window.innerHeight / 40);
 
-    phrase.style.left = Math.random() * (window.innerWidth - fontSize * phrase.textContent.length / 2) + "px";
-    phrase.style.top = "-40px";
-
-    const duration = Math.random() * 2 + 5;
-    phrase.style.animationDuration = duration + "s";
-
-    document.body.appendChild(phrase);
-
-    setTimeout(() => phrase.remove(), duration * 1000);
-  }
-
-  setInterval(createFallingPhrase, 120);
-
-  document.body.addEventListener("click", (e) => {
-    const hearts = ["💖", "💘", "💕", "💞", "❤️"];
-
-    for (let i = 0; i < 15; i++) {
-      const heart = document.createElement("div");
-      heart.className = "heart";
-      heart.textContent = hearts[Math.floor(Math.random() * hearts.length)];
-
-      heart.style.left = e.clientX + "px";
-      heart.style.top = e.clientY + "px";
-
-      heart.style.fontSize = (Math.random() * 10 + 20) + "px";
-
-      document.body.appendChild(heart);
-
-      const angle = Math.random() * 2 * Math.PI;
-      const distance = Math.random() * 120 + 40;
-
-      const startX = e.clientX;
-      const startY = e.clientY;
-
-      const duration = 1000 + Math.random() * 500;
-      let startTime = null;
-
-      function animate(time) {
-        if (!startTime) startTime = time;
-        const elapsed = time - startTime;
-        const progress = Math.min(elapsed / duration, 1);
-
-        const x = startX + Math.cos(angle) * distance * progress;
-        const y = startY + Math.sin(angle) * distance * progress;
-
-        heart.style.transform = `translate(${x - startX}px, ${y - startY}px) scale(${1 - progress * 0.6})`;
-        heart.style.opacity = 1 - progress;
-
-        if (progress < 1) {
-          requestAnimationFrame(animate);
-        } else {
-          heart.remove();
-        }
-      }
-
-      requestAnimationFrame(animate);
+    for (let i = 0; i < cols * rows; i++) {
+      const span = document.createElement('span');
+      span.className = 'text';
+      span.textContent = phrase;
+      grid.appendChild(span);
     }
-  });
-</script>
 
+    document.addEventListener('mousemove', (e) => {
+      const texts = document.querySelectorAll('.text');
+
+      texts.forEach(el => {
+        const rect = el.getBoundingClientRect();
+        const dx = e.clientX - (rect.left + rect.width / 2);
+        const dy = e.clientY - (rect.top + rect.height / 2);
+        const distance = Math.sqrt(dx * dx + dy * dy);
+
+        if (distance < 100) {
+          el.classList.add('pop');
+          setTimeout(() => el.classList.remove('pop'), 200);
+        }
+      });
+    });
+  </script>
 </body>
 </html>
